@@ -39,7 +39,8 @@ process_multilib_options ""
 # We only support newlib on this target. We assume that all multilib
 # options have been specified before we get here.
 
-set_board_info compiler  "[find_gcc]"
+# set_board_info compiler  "[find_gcc]"
+set_board_info compiler arc-elf32-gcc
 set_board_info cflags    "[libgloss_include_flags] [newlib_include_flags]"
 set_board_info ldflags   "[libgloss_link_flags] ${xldflags} [newlib_link_flags]"
 # No linker script needed.
